@@ -31,14 +31,51 @@ package EPrints::MetaField::Email;
 use strict;
 use warnings;
 
-BEGIN
-{
-	our( @ISA );
+use EPrints::MetaField::Text;
+our @ISA = qw( EPrints::MetaField::Text );
 
-	@ISA = qw( EPrints::MetaField::Text );
+sub get_property_defaults
+{
+	my( $self ) = @_;
+	my %defaults = $self->SUPER::get_property_defaults;
+	$defaults{text_index} = 0;
+	$defaults{sql_index} = 1;
+	return %defaults;
 }
 
-use EPrints::MetaField::Text;
+sub render_search_value
+{
+	my( $self, $session, $value ) = @_;
+
+	my $valuedesc = $session->make_doc_fragment;
+	$valuedesc->appendChild( $session->make_text( '"' ) );
+	$valuedesc->appendChild( $session->make_text( $value ) );
+	$valuedesc->appendChild( $session->make_text( '"' ) );
+
+	return $valuedesc;
+}
+
+sub from_search_form
+{
+	my( $self, $session, $basename ) = @_;
+
+	# complex text types
+
+	my $val = $session->param( $basename );
+	return unless defined $val;
+
+	my $search_type = $session->param( $basename."_merge" );
+	my $search_match = $session->param( $basename."_match" );
+		
+	# Default search type if none supplied (to allow searches 
+	# using simple HTTP GETs)
+	$search_type = "ALL" unless defined( $search_type );
+	$search_match = "EX" unless defined( $search_match );
+		
+	return unless( defined $val );
+
+	return( $val, $search_type, $search_match );	
+}		
 
 sub render_single_value
 {
